
2022-12-06  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* cobc.h (struct cb_replace_src, struct list_replace): adapt internal
	  structures for strict partial text replacement
	* cobc.c (print_replace_text, print_replace_main),
	  pplex.l (set_print_replace_list, ppecho),
	  ppparse.y (ppp_replace_src, ppp_replace_list_add): handle strict
	  partial text replacement

2022-12-06 Simon Sobisch <simonsobisch@gnu.org>

	* field.c (validate_redefines): check for target not to have ANY LENGTH

2022-12-05  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* cobc.c: replace some incorrect '%d' format indicators with '%lu'

2022-12-03 Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c: check SOURCE_DATE_EPOCH once, if set parse via libcob
	  to use as compile timestamp

2022-12-02  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.h: allow to override COB_DASH_NAME and COB_DASH_OUT

2022-12-01  Simon Sobisch <simonsobisch@gnu.org>

	* scanner.l: fixed double and missing free for internal constants
	* parser.y (_erase): fixed missing return, breaking (exhibit_body)
	* tree.c (cb_concat_literals, cb_name_1), scanner.l (error_literal),
	  reserved.c (get_system_name_translated): fixed missing initialization
	* parser.y: marked missing translatable string

2022-11-19  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y (value_clause): handle simple VALUES without any optional
	  phrases and with only a single value explicit not as table-format but
	  as if VALUE was specified (raising a warning/error depending on
	  relax-syntax-checks), as at least MicroFocus has this non-standard
	  (and undocumented) extension
	* field.c (validate_elem_value): explicit check that non-occurs item has
	  only a single value
	* parser.y (value_clause): improved parsing for table-format

2022-11-18  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* cobc.c (print_line): fully honor -fmfcomment by suppressing lines
	  that start with an asterisk from listings
