@@ -1,8 +1,11 @@
 
 2022-12-06  Nicolas Berthier <nicolas.berthier@ocamlpro.com>
 
-	* cobc.h (struct cb_replace_src, struct list_replace): adapt internal
-	  structures for strict partial text replacement
+	* cobc.h (struct cb_replace_src, struct cb_replace_list, struct
+	  cb_turn_list, cb_turn_list, struct list_error, struct list_replace)
+	  (struct list_skip, struct list_files): move internal struct and symbol
+	  declarations to tree.h, and adapt some structures for strict partial
+	  text replacement
 	* cobc.c (print_replace_text, print_replace_main),
 	  pplex.l (set_print_replace_list, ppecho),
 	  ppparse.y (ppp_replace_src, ppp_replace_list_add): handle strict
